# picoSignals

./: .gitignore  CMakeLists.txt  GARhead.cpp  GARhead.h  RGBhead.cpp  RGBhead.h  battery.cpp  config.json  config17.json  config18.json  config19.json  config21.json  config222.json  config3.json  config4.json  ctc.cpp  head.h  heads.cpp  hw_config.c  inits.h  io.cpp  led.cpp  main.cpp  menu.cpp  overlay.cpp  pca9674.cpp  pca9674.h  pca9955.cpp  pca9955.h  picoSignals.cpp  picoSignals.ld  radio.cpp  utils.c
.cache/clangd/index/: Alignment.hpp.D7B5F0FE47E5B7EE.idx  Allocator.hpp.3C0C2AA31D945E94.idx  ArduinoJson.h.A3B7104EAB298767.idx  ArduinoJson.hpp.D081142762E3A331.idx  ArrayData.hpp.C118FD65E3457D9C.idx  ArrayImpl.hpp.1F0483EE1B420A76.idx  BasicJsonDocument.hpp.C78AE20AE7E95C65.idx  CollectionData.hpp.BD1A42BC5B9306A8.idx  CollectionImpl.hpp.587F91DC69E37517.idx  Configuration.hpp.4E817EF367325ECE.idx  Converter.hpp.47A185F51916F8E7.idx  ConverterImpl.hpp.3BDB05291575E2A3.idx  CountingDecorator.hpp.2B6A0672EF7D7789.idx  DeserializationError.hpp.396497B803652555.idx  DeserializationOptions.hpp.E6610C318F695A21.idx  DummyWriter.hpp.6ECD00A9E90D75AF.idx  DynamicJsonDocument.hpp.BECEAF492C9E9C42.idx  ElementProxy.hpp.A332C2C16795181D.idx  EscapeSequence.hpp.6165E97028F34C0C.idx  Filter.hpp.47BB8CBDCE4572B7.idx  FloatParts.hpp.2B29B9C91061F5AD.idx  FloatTraits.hpp.57E2454D5A664F63.idx  GARhead.cpp.39886F68D20F1680.idx  GARhead.h.EF3928BB78EF03B1.idx  IsString.hpp.F19DBC68E41C547D.idx  IteratorReader.hpp.6EC5B3C03A03D6E3.idx  JsonArray.hpp.3E913B29110C258A.idx  JsonArrayConst.hpp.327B2C35C8D69339.idx  JsonArrayImpl.hpp.1179229A957AE6C2.idx  JsonArrayIterator.hpp.FC1B865ADF8D4497.idx  JsonDeserializer.hpp.0B685F079585D27C.idx  JsonDocument.hpp.EE8FEDAFA9EC92A5.idx  JsonFloat.hpp.365298C1E4B2AF7C.idx  JsonInteger.hpp.A3F80C001DA8F222.idx  JsonObject.hpp.0BCCCB4B40244D89.idx  JsonObjectConst.hpp.404F84F0E5C9F6EA.idx  JsonObjectImpl.hpp.6B378B28B5DE3BD5.idx  JsonObjectIterator.hpp.5B10497F3AE69CBD.idx  JsonPair.hpp.3D488A11B34A568F.idx  JsonSerializer.hpp.FD49B1B5BB50A62C.idx  (+147 more)
BT&IR Configs/: config1.json  config2.json
Builds/: picoSignals-V2R0.uf2  picoSignals-V2R1.uf2  picoSignals-V2R2.uf2  picoSignals-V2R3.uf2  picoSignals-V2R4.uf2  picoSignals-V3R0.uf2  picoSignals-V3R1.uf2  picoSignals-V3R2.uf2
CSPPRY Configs/: config1.json  config10.json  config100ctc.json  config13.json  config14.json  config15.json  config17.json  config18.json  config18rgb.json  config19.json  config2-cmp.json  config2.json  config21.json  config21rgb.json  config21rgbFull.json  config5ovl.json  config9.json  config99.json  config99ctc.json
CTC Map/: CTC2.py  remoteTerminal.py
Configurer/: CLIconfigurer.py  GUIconfigurer.py
FatFs_SPI/sd_driver/: sd_card.c
Headers/: FreeRTOSConfig.h  GARhead.h  RGBhead.h  battery.h  ctc.h  head.h  heads.h  inits.h  io.h  led.h  main.h  menu.h  overlay.h  pca9674.h  pca9955.h  radio.h
PicoSignalsCLI/: PicoSignalCLI.py
RFM95/: RFM95.cpp  RFM95.h
Test Configs/: config.json  config222.json  config3.json  config4.json  config5.json  config99.json
